--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "watch": "poi watch --config poi.config.js",
     "test": "NODE_ENV=test nyc --require babel-register --require babel-polyfill --reporter=lcov --reporter=text-summary mocha --recursive test/unit/ --require ./test/setup.js",
     "tdd": "npm run test -- --watch",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf coverage",
     "bundlesize": "bundlesize"
   },
   "repository": {
@@ -38,6 +39,7 @@
     "bundlesize": "^0.17.0",
     "chai": "^4.1.2",
     "changelog-verify": "^1.1.0",
+    "coveralls": "^3.0.1",
     "css-modules-require-hook": "^4.2.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
